--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "mongodb": "^6.9.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
