--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "mongodb": "^6.9.0",
+    "firebase": "^10.13.2",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
